- Bug #2394: Fixed a typo in CDbCache that may cause mget() to fail (Qiang)
- Bug #2409: Fixed the bug that CCaptcha::buttonOptions is not respected (Qiang)
- Bug #2411: Fixed the bug that CCaptcha will fail when setting buttonType to be 'button' (Qiang)
- Bug #2422: Fixed the bug that calling CLogger::flush(true) multiple times may cause duplication of dumped messages (Qiang)
- Bug #2475: Fixed the bug that CMssqlCommandBuilder and COciCommandBuilder don't respect parameters declared in CDbExpression when doing insertion and updating (Qiang)
- Bug #2485: Fixed the bug that CMssqlPdoAdapter is not used when the driver is sqlsrv (Qiang)
- Bug: CMapIterator current key wasn't initialized properly (Sam Dark, Detonator)
- Bug: Controller generated with Gii CRUD wasn't able to handle non-integer primary key (Sam Dark)
- Bug: Query caching may give incorrect caching results when bindParam or bindValue is used (Qiang)
- Enh #2319: Added support to call behavior scope through criteria 'with'=>array('scopes'=>'behaviorScope') (Sam Dark, creocoder)
- Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
- Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
- Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
- Enh #2299: Added CAssetManager.newFileMode and newDirMode (Qiang)
- Enh #2325: Added $option parameter to CDbCommand::select() to support special SELECT syntax (Qiang)
- Enh #2341: More verbose log message for CModel::onUnsafeAttribute. Added model class (Sam Dark)
- Enh #2357: Documented CWebApplication accessors with @property for better IDE autocomplete (Sam Dark)
- Enh #2361: Added CDbConnection::pdoClass that allows to specify and use custom PDO wrapper class (Sam Dark)
- Enh #2389: MessageCommand now accepts overwrite option determining if merge result will overwrite existing file (Sam Dark)